authentication with JWT and redirect after login

--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -80,6 +80,7 @@
             <button
               type="submit"
               class="btn btn-primary"
+              id="signup"
               [disabled]="!signupForm.valid"
             >
               Sign Up
