Reset password with ng-notify service

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -50,6 +50,11 @@
             </a>
           </div>
         </div>
+        <small>
+          <a routerLink="/request-password-reset" class="float-right"
+            >Reset Password</a
+          >
+        </small>
       </form>
     </div>
   </div>
