--- a/frontend/src/app/components/password/request-reset/request-reset.component.html
+++ b/frontend/src/app/components/password/request-reset/request-reset.component.html
@@ -1,3 +1,35 @@
-<p>
-  request-reset works!
-</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Send Email for Reset Password</div>
+    <div class="card-body">
+      <form #RequestResetForm="ngForm" (ngSubmit)="onSubmit()">
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              id="inputEmail3"
+              [(ngModel)]="form.email"
+              placeholder="Email"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm-10 offset-2">
+            <button
+              type="submit"
+              class="btn btn-primary"
+              [disabled]="!RequestResetForm.valid"
+            >
+              Send Reset Password Link
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
