--- a/frontend/src/app/components/password/response-reset/response-reset.component.html
+++ b/frontend/src/app/components/password/response-reset/response-reset.component.html
@@ -15,6 +15,9 @@
               placeholder="Email"
               required
             />
+            <span class="text-danger" [hidden]="!error.email">{{
+              error.email
+            }}</span>
           </div>
         </div>
         <div class="form-group row">
@@ -31,6 +34,9 @@
               placeholder="Password"
               required
             />
+            <span class="text-danger" [hidden]="!error.password">{{
+              error.password
+            }}</span>
           </div>
         </div>
         <div class="form-group row">
@@ -47,6 +53,9 @@
               placeholder="Confirm Password"
               required
             />
+            <span class="text-danger" [hidden]="!error.password_confirmation">{{
+              error.password_confirmation
+            }}</span>
           </div>
         </div>
 
