--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,9 @@
+<ngx-spinner
+  bdColor="rgba(51, 51, 51, 0.8)"
+  size="large"
+  color="#fff"
+  type="ball-pulse"
+></ngx-spinner>
 <div class="mt-4 col-8 offset-2">
   <div class="card">
     <div class="card-header">Login Here</div>
